--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,7 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.1.*",
-		"way/generators": "dev-master",
-		"wisembly/elephant.io": "dev-master",
-		"juy/profiler" : "dev-master",
-		"intervention/image": "dev-master",
-		"leafo/lessphp": "0.4.0",
-		"knplabs/github-api": "*",
-		"mccool/laravel-auto-presenter": "*"
+		"syntax/core": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
@@ -20,15 +14,6 @@
 			"app/library",
 			"app/presenters",
 			"app/models",
-			"app/core",
-			"app/core/commands",
-			"app/core/controllers",
-			"app/core/Control",
-			"app/core/library",
-			"app/core/models",
-			"app/core/Forum",
-			"app/core/presenters",
-			"app/core/Utility",
 			"app/database/migrations",
 			"app/database/seeds",
 			"app/tests/TestCase.php"
