--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,10 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.1.*",
+		"laravel/framework": "4.1.21",
 		"syntax/core": "dev-master",
-		"orangehill/iseed": "dev-master"
+		"orangehill/iseed": "dev-master",
+		"anlutro/curl": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
